--- a/app/Resources/translations/userform.en.yml
+++ b/app/Resources/translations/userform.en.yml
@@ -2,5 +2,6 @@
 password.actual: Actual
 password.new.first: New
 password.new.second: New (check)
-
+username: Username
+new_username:  New username
 accept_cgu_registration: By processing registration you accept <a href="%link%">terms of service</a> of muzi.ch
