--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -45,7 +45,7 @@ title:
 my_account: 
   title:          Mon compte
   username:         Nom d'utilisateur
-  change_username:  modifier
+  change_username:  Modifier
   email:            Adresse email
   favorite_tags:    Vos tags préférés
   change_password:  Changer mon mot de passe
@@ -75,6 +75,7 @@ my_account:
     submit:         Enregistrer mes préférences
     success:        Vos préférences ont bien été mises à jour
     error:          Une erreur est survenue lors de la mise à jour de vos préférences
+  send_email_confirm: Renvoyer l'email de confirmation
 
 change_username:
   submit:           Changer
