Evolution #687: Tags: bouton enlever tous + boutons favoris

--- a/app/Resources/translations/userui.en.yml
+++ b/app/Resources/translations/userui.en.yml
@@ -94,6 +94,8 @@ tags:
     help:  |
             Choissiez un tag dans la liste ci-dessous en cliquant dessus. Pour saisir plusieurs tags
             renouvellez l'opération pour chacuns d'entre eux.
+    remove_all: Enlever tous les tags
+    favorites:  Mettre mes tags favoris
   help:  |
            Saisissez <strong>une liste de tags</strong> ci-dessous: Entrez 
            <strong>un tag a la fois</strong> et choisissez les a l'aide de 
