--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -90,7 +90,7 @@ change_username:
   warning:          Attention: une fois votre nom d'utilisateur modifié vous ne pourrez plus en changer !
 
 connexion:
-  password_lost:    Mot de passe perdu ?
+  password_lost:    Récupérer mon mot de passe
   
 more:    Plus de résultats
 tags:
@@ -256,7 +256,7 @@ need_tags:
 register:
   title:                 Création d'un compte
 registration:
-  submit:                Procéder a l'inscription
+  submit:                M'enregistrer
 
 autoplay:
   limitations_players:   La lecture automatique ne supporte actuellement que les lecteurs youtube, soundcloud et jamendo.
