--- a/app/Resources/translations/text.fr.yml
+++ b/app/Resources/translations/text.fr.yml
@@ -103,9 +103,10 @@ help:
     text1:            |
                       Vous devez mettre dans ce champ l'adresse de la page internet
                       contenant la musique à partager. Faites bien attention a vous 
-                      trouver sur la page représentant la musique que vous souahitez 
+                      trouver sur la page représentant la musique que vous souaihtez 
                       partager. Evitez par exemple de partager une adresse après 
                       avoir effectué une recherche.
+    text1_plugin:     Bientôt un plugin firefox, chrome (et d'autres) pour partager encore plus facilement !
     title2:           Exemple avec Youtube
     title3:           Exemple avec Soundcloud
   tags_prompt:
