--- a/app/Resources/translations/userui.en.yml
+++ b/app/Resources/translations/userui.en.yml
@@ -170,7 +170,7 @@ element_add:
     help:     |
               Copier ici le lien internet (http://) pointant sur la ressource 
               que vous souhaitez partager.
-    more_help: Cliquez ici pour plus de détails
+    more_help: Cliquez ici pour plus d'aide
               
   need_tags:
     name:     Demander de l'aide pour tagger votre partage
