design prompt playlists

--- a/app/Resources/translations/elements.fr.yml
+++ b/app/Resources/translations/elements.fr.yml
@@ -127,3 +127,8 @@ playlist:
   openplaylist:          Consulter les partages de la liste de lecture
   delete:                Supprimer cette liste de lecture
   play:                  Jouer la liste de lecture
+  add_this_element:      Ajouter ce partage a une liste de lecture
+  create_and_add:        Ajouter ce partage à une nouvelle liste de lecture:
+  add_to:                Ou à une liste de lecture existante:
+  create_submit:         Ajouter
+  public_label:          Publique
