--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -90,10 +90,18 @@ my_account:
                     La configuration de vos tags favoris permettrons de filtrer
                     la liste de partage selon vos goûts musicaux lors de chacunes de vos
                     visites. N'hésitez pas à en configurer beaucoups !
+  privacy:
+    title:          Vie privée
+    submit:         Mettre à jour
+    form:
+      favorites:    Les autres utilisateurs peuvent voir mes favoris
+      playlists:    Les autres utilisateurs peuvent voir mes listes de lecture
+    success:        Vos paramètres de vie privée ont bien été mises à jour
+    error:          Une erreur est survenue lors de la mise à jour de vos paramètres de vie privée
 
 change_username:
   submit:           Changer
-  warning:          Attention: une fois votre nom d'utilisateur modifié vous ne pourrez plus en changer !
+  warning:          "Attention: une fois votre nom d'utilisateur modifié vous ne pourrez plus en changer !"
 
 connexion:
   password_lost:    Récupérer mon mot de passe
