--- a/app/Resources/translations/userui.fr.yml
+++ b/app/Resources/translations/userui.fr.yml
@@ -98,6 +98,10 @@ my_account:
       playlists:    Les autres utilisateurs peuvent voir mes listes de lecture
     success:        Vos paramètres de vie privée ont bien été mises à jour
     error:          Une erreur est survenue lors de la mise à jour de vos paramètres de vie privée
+  delete:
+    title:          Supprimer mon compte
+    text:           Attention: Il vous sera impossible d'annuler cette action après avoir confirmé la suppression de votre compte !
+    submit:         Je confirme vouloir supprimer définitivement ce compte
 
 change_username:
   submit:           Changer
