--- a/app/Resources/translations/flash.fr.yml
+++ b/app/Resources/translations/flash.fr.yml
@@ -52,3 +52,5 @@ presubscription:
 playlist:
   delete:
     success:       Playlist supprimée
+  update:
+    success:       La liste de lecture a été mise à jour
