--- a/app/Resources/translations/text.fr.yml
+++ b/app/Resources/translations/text.fr.yml
@@ -3,7 +3,7 @@ site:
   description:   |
                   Découvrez et partagez la musique d'internet ! Muzi.ch est un
                   réseau vous permettant de partager et d'écouter vos découvertes
-                  musicales.
+                  musicales parmis les différents site d'écoutes comme deezer, youtube, soundcloud ...
 
 sites:
   subtitle:      Support des sites externes
